--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <div id="container">
+            <div id="cabecera">
+                hyperblog 
+                <span id="tagline">tu blog de cabecera</span>
+            </div>
             <div id="post">    
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Estees el parrafo de inicio donde vamos a explicar las
