--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,10 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Estees el parrafo de inicio donde vamos a explicar las
                 codas increibles que se pueden hacer con ramas</p>
+                <p>Los blogs son las mejor forma de compartir informaciony tus ideas.
+                    Muchas que ir a conferencias o salir en Youtube. Exepto si eres un Rockstar.
+                    pero estadisticamente no lo eres... por ahora</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
