se edita header en html y css, se adiciona logo, marcos y fondo oscuro

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,6 +7,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="pictures/dragon.png"/>
                 hyperblog 
                 <span id="tagline">tu blog de cabecera</span>
             </div>
@@ -14,9 +15,11 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Estees el parrafo de inicio donde vamos a explicar las
                 codas increibles que se pueden hacer con ramas</p>
-                <p>Los blogs son las mejor forma de compartir informaciony tus ideas.
+                <p>
+                    Los blogs son las mejor forma de compartir informaciony tus ideas.
                     Muchas que ir a conferencias o salir en Youtube. Exepto si eres un Rockstar.
-                    pero estadisticamente no lo eres... por ahora</p>
+                    pero estadisticamente no lo eres... por ahora
+                </p>
                 <p>Suscribete y dale like</p>
             </div>
         </div>
