Se realiza cambio en la parte final del parrafo

--- a/blogpost.html
+++ b/blogpost.html
@@ -20,7 +20,7 @@
                     Muchas que ir a conferencias o salir en Youtube. Exepto si eres un Rockstar.
                     pero estadisticamente no lo eres... por ahora
                 </p>
-                <p>Suscribete y dale like</p>
+                <p>Nunca pares de aprender</p>
             </div>
             <div id="footer">
                 Hecho con amor en Platzi Colombia
