--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,7 @@
                 <h1>Este es el titulo atractivo e interesante del post</h1>
                 <p>Estees el parrafo de inicio donde vamos a explicar las
                 codas increibles que se pueden hacer con ramas</p>
+                <p><img src="pictures/Git.png" width="50%"></p>
                 <p>
                     Los blogs son las mejor forma de compartir informaciony tus ideas.
                     Muchas que ir a conferencias o salir en Youtube. Exepto si eres un Rockstar.
